# simple-fps

./: .gitignore  .mcp.json  Cargo.toml  DEVELOPMENT_GUIDE.md  NAT_TEST_GUIDE.md  OPTIMIZATION_GUIDE.md  Shuttle.toml  TECHNICAL_NOTES.md  multiplayer_expansion_plan.md  shuttle_prebuild.sh
all-about-shinji/: index.css  package-lock.json
src/: ai_api.rs  main.rs  signaling.rs
static/: index.css  index.html  index.tsx  metadata.json  novel.txt  package-lock.json  package.json
static/ai-agent-research/: index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  vite.config.ts
static/all-about-shinji/: index.html  index.tsx  metadata.json  package.json  vite.config.ts
static/assets/Custom Rigg/: Zombie_Schoolgirl_01_compressed.glb
static/card-game/: index.css  index.html  index.tsx  metadata.json  package.json  vite.config.ts
static/clone-shinji/: index.css  index.html  index.tsx  metadata.json  package.json  vite.config.ts
static/controls/: PointerLockControls.local.js
static/prometheus-novel/: ash-reqiem  dark-ash  golden-silent  index.css  index.html  index.tsx  metadata.json  neko  package-lock.json  package.json  prometheus  tsconfig.json  vite.config.ts
static/simple-fps/: index.css  index.tsx  vite.config.ts
